assets/css/main.css
/* ... */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

body {
  line-height: 1;
}

ol,
ul {
  list-style: none;
}

blockquote,
q {
  quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

body {
  -webkit-text-size-adjust: none;
}

mark {
  background-color: transparent;
  color: inherit;
}

input::-moz-focus-inner {
  border: 0;
  padding: 0;
}

input,
select,
textarea {
  -moz-appearance: none;
  -webkit-appearance: none;
  -ms-appearance: none;
  appearance: none;
}

/* Basic */

html {
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body {
  background: #f2f5f3;
}

body.is-preload *,
body.is-preload *:before,
body.is-preload *:after {
  -moz-animation: none !important;
  -webkit-animation: none !important;
  -ms-animation: none !important;
  animation: none !important;
  -moz-transition: none !important;
  -webkit-transition: none !important;
  -ms-transition: none !important;
  transition: none !important;
}

body,
input,
textarea,
select {
  font-family: "Open Sans", sans-serif;
  font-weight: 400;
  color: #6b7770;
  font-size: 13pt;
  line-height: 2em;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Open Sans Condensed", sans-serif;
  font-weight: 700;
  text-transform: uppercase;
  color: #6b7770;
  margin: 0 0 0.5em 0;
  line-height: 1.3;
}

h1 a,
h2 a,
h3 a,
h4 a,
h5 a,
h6 a {
  text-decoration: none;
  color: inherit;
}

h2 {
  font-size: 1.65em;
}

h2.major {
  position: relative;
  border-top: solid 5px #e7eae8;
  font-size: 1.65em;
  text-align: center;
  margin: 0 0 3em 0;
  top: 0.775em;
}

h2.major span {
  background: #fff;
  position: relative;
  display: inline-block;
  top: -0.775em;
  padding: 0 1.25em 0 1.25em;
}

h3.underline {
  border-bottom: solid 2px #6b7770;
}

h6.minheight {
  min-height: 3em;
}

h3,
h4 {
  font-size: 1.25em;
}

a {
  color: #006376;
  text-decoration: underline;
}

a:hover {
  text-decoration: none;
}

b,
strong {
  font-weight: 700;
  color: #6b7770;
}

i,
em {
  font-style: italic;
}

br.clear {
  clear: both;
}

sub {
  position: relative;
  top: 0.5em;
  font-size: 0.8em;
}

sup {
  position: relative;
  top: -0.5em;
  font-size: 0.8em;
}

hr {
  border: 0;
  border-top: solid 2px #e7eae8;
  margin: 0 0 3em 0;
}

blockquote {
  border-left: solid 5px #e7eae8;
  padding: 1em 0 1em 1.5em;
  font-style: italic;
}

p,
ul,
ol,
dl,
table {
  margin-bottom: 3em;
}

/* Section/Article */

section,
article {
  margin-bottom: 6em;
}

section > :last-child,
section:last-child,
article > :last-child,
article:last-child {
  margin-bottom: 0;
}

header > p {
  display: block;
  font-family: "Open Sans Condensed", sans-serif;
  font-weight: 700;
  text-transform: uppercase;
  color: #c1cac5;
}

/* Container */

.container {
  margin: 0 auto;
  max-width: 100%;
  width: 64em;
}

@media screen and (max-width: 1680px) {
  .container {
    width: 75em;
  }
}

@media screen and (max-width: 1280px) {
  .container {
    width: calc(100% - 100px);
  }
}

@media screen and (max-width: 980px) {
  .container {
    width: calc(100% - 100px);
  }
}

@media screen and (max-width: 736px) {
  .container {
    width: calc(100% - 40px);
  }
}

@media screen and (max-width: 360px) {
  .container {
    width: calc(100% - 30px);
  }
}

/* Row */

.row {
  display: flex;
  flex-wrap: wrap;
  box-sizing: border-box;
  align-items: stretch;
}

.row > * {
  box-sizing: border-box;
}

.row.gtr-uniform > * > :last-child {
  margin-bottom: 0;
}

.row.aln-left {
  justify-content: flex-start;
}

.row.aln-center {
  justify-content: center;
}

.row.aln-right {
  justify-content: flex-end;
}

.row.aln-top {
  align-items: flex-start;
}

.row.aln-middle {
  align-items: center;
}

.row.aln-bottom {
  align-items: flex-end;
}

.row > .imp {
  order: -1;
}

.row > .col-1 {
  width: 8.33333%;
}

.row > .off-1 {
  margin-left: 8.33333%;
}

.row > .col-2 {
  width: 16.66667%;
}

.row > .off-2 {
  margin-left: 16.66667%;
}

.row > .col-3 {
  width: 25%;
}

.row > .off-3 {
  margin-left: 25%;
}

.row > .col-4 {
  width: 33.33333%;
}

.row > .off-4 {
  margin-left: 33.33333%;
}

.row > .col-5 {
  width: 41.66667%;
}

.row > .off-5 {
  margin-left: 41.66667%;
}

.row > .col-6 {
  width: 50%;
}

.row > .off-6 {
  margin-left: 50%;
}

.row > .col-7 {
  width: 58.33333%;
}

.row > .off-7 {
  margin-left: 58.33333%;
}

.row > .col-8 {
  width: 66.66667%;
}

.row > .off-8 {
  margin-left: 66.66667%;
}

.row > .col-9 {
  width: 75%;
}

.row > .off-9 {
  margin-left: 75%;
}

.row > .col-10 {
  width: 83.33333%;
}

.row > .off-10 {
  margin-left: 83.33333%;
}

.row > .col-11 {
  width: 91.66667%;
}

.row > .off-11 {
  margin-left: 91.66667%;
}

.row > .col-12 {
  width: 100%;
}

.row.gtr-200 > .smallpadding {
  padding-top: 3em;
}

.row > .off-12 {
  margin-left: 100%;
}

.row.gtr-0 {
  margin-top: 0px;
  margin-left: 0px;
}

.row.gtr-0 > * {
  padding: 0px 0 0 0px;
}

.row.gtr-0.gtr-uniform {
  margin-top: 0px;
}

.row.gtr-0.gtr-uniform > * {
  padding-top: 0px;
}

.row.gtr-25 {
  margin-top: -12.5px;
  margin-left: -12.5px;
}

.row.gtr-25 > * {
  padding: 12.5px 0 0 12.5px;
}

.row.gtr-25.gtr-uniform {
  margin-top: -12.5px;
}

.row.gtr-25.gtr-uniform > * {
  padding-top: 12.5px;
}

.row.gtr-50 {
  margin-top: -25px;
  margin-left: -25px;
}

.row.gtr-50 > * {
  padding: 25px 0 0 25px;
}

.row.gtr-50.gtr-uniform {
  margin-top: -25px;
}

.row.gtr-50.gtr-uniform > * {
  padding-top: 25px;
}

.row {
  margin-top: -50px;
  margin-left: -50px;
}

.row > * {
  padding: 50px 0 0 50px;
}

.row.gtr-uniform {
  margin-top: -50px;
}

.row.gtr-uniform > * {
  padding-top: 50px;
}

.row.gtr-150 {
  margin-top: -75px;
  margin-left: -75px;
}

.row.gtr-150 > * {
  padding: 75px 0 0 75px;
}

.row.gtr-150.gtr-uniform {
  margin-top: -75px;
}

.row.gtr-150.gtr-uniform > * {
  padding-top: 75px;
}
/* ... */

